--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "app.js",
   "scripts": {
     "prestart": "rm -rf dist",
-    "start": "npm run eslint && gulp app",
-    "eslint": "eslint --fix **/*.jsx **/*.js"
+    "build-webpack": "webpack --config bundle.config.js && webpack --config app.config.js",
+    "start": "npm run less && npm run eslint && npm run build-webpack && node app.bundle.js",
+    "eslint": "eslint --fix **/*.jsx **/*.js",
+    "less": "node ./node_modules/less/bin/lessc public/less/style.less > public/style.css"
   },
   "dependencies": {
     "babel-core": "^6.4.5",
@@ -20,9 +22,6 @@
     "eslint-loader": "^1.2.0",
     "eslint-plugin-react": "^3.15.0",
     "express": "^4.13.3",
-    "gulp": "^3.9.0",
-    "gulp-less": "^3.0.5",
-    "gulp-sourcemaps": "^1.6.0",
     "history": "^1.17.0",
     "moment": "^2.11.1",
     "react": "^0.14.6",
@@ -37,8 +36,6 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "gulp-babel": "^6.1.1",
-    "gulp-sourcemaps": "^1.6.0",
     "mofo-style": "^2.0.0",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
