--- a/package.json
+++ b/package.json
@@ -10,16 +10,6 @@
     "less": "node ./node_modules/less/bin/lessc public/less/style.less > public/style.css"
   },
   "dependencies": {
-    "babel-core": "^6.4.5",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "body-parser": "^1.14.2",
-    "compression": "^1.6.1",
-    "eslint": "^1.10.3",
-    "eslint-loader": "^1.2.0",
-    "eslint-plugin-react": "^3.15.0",
     "express": "^4.13.3",
     "history": "^1.17.0",
     "moment": "^2.11.1",
@@ -27,16 +17,20 @@
     "react-dom": "^0.14.6",
     "react-router": "^1.0.3",
     "superagent": "^1.7.1",
-    "webpack": "^1.12.11",
-    "webpack-stream": "^3.1.0"
+    "webpack": "^1.12.11"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
+    "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "eslint": "^1.10.3",
+    "eslint-loader": "^1.2.0",
+    "eslint-plugin-react": "^3.15.0",
+    "less": "^2.6.0",
+    "less-loader": "^2.2.2",
     "mofo-style": "^2.0.0",
-    "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
   },
   "eslintConfig": {
@@ -53,7 +47,11 @@
       "jsx": true
     },
     "rules": {
-      "no-console": 1
+      "no-console": 1,
+      "strict": [
+        2,
+        "never"
+      ]
     },
     "plugins": [
       "react"
