--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "main": "app.js",
   "scripts": {
     "build-webpack": "webpack --config bundle.config.js && webpack --config app.config.js",
-    "start": "npm run less && npm run eslint && npm run build-webpack && node app.bundle.js",
     "eslint": "eslint --fix **/*.jsx **/*.js",
-    "less": "node ./node_modules/less/bin/lessc public/less/style.less > public/style.css"
+    "less": "node ./node_modules/less/bin/lessc public/less/style.less > public/style.css",
+    "start": "npm run less && npm run build-webpack && node app.bundle.js",
+    "dev": "npm run eslint && npm run start"
   },
   "dependencies": {
+    "babel-core": "^6.4.5",
+    "babel-eslint": "^4.1.6",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "express": "^4.13.3",
     "history": "^1.17.0",
+    "less": "^2.6.0",
     "moment": "^2.11.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
@@ -20,15 +27,9 @@
     "webpack": "^1.12.11"
   },
   "devDependencies": {
-    "babel-core": "^6.4.5",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
     "eslint": "^1.10.3",
     "eslint-loader": "^1.2.0",
     "eslint-plugin-react": "^3.15.0",
-    "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "mofo-style": "^2.0.0",
     "webpack-dev-server": "^1.14.1"
