--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build-webpack": "webpack --config bundle.config.js && webpack --config app.config.js",
     "eslint": "eslint --fix **/*.jsx **/*.js",
-    "less": "node ./node_modules/less/bin/lessc public/less/style.less > public/style.css",
+    "less": "node ./node_modules/less/bin/lessc public/less/index.less > public/style.css",
     "start": "npm run less && npm run build-webpack && node app.bundle.js",
     "dev": "npm run eslint && npm run start"
   },
